# lj-website

./: CNAME  LICENSE  README.md  cfp.html  content.html  deploy.sh  hotel.html  index.html  lambdajam.cabal  policies.html  preview.sh  program.html  register.html  site.hs  speakers.html  sponsorship.html  venue.html
css/: main.1394330657.306904s.less  main.1394483695.074309s.less  main.1394680828.837521s.less  main.1394720958.132688s.less  main.1400057061.080703s.less  main.1405917634.044861s.less  main.less
templates/: default.html
